Page, aside link: prevent from line break in link's title

--- a/app/assets/stylesheets/base/_pages.sass
+++ b/app/assets/stylesheets/base/_pages.sass
@@ -50,7 +50,10 @@ body.page
                     background-size: 100% 100%
                     background-repeat: no-repeat
                     line-height: 20px
-                    padding: 25px $padding-base
+                    padding: 25px 5px
+                    white-space: nowrap
+                    overflow: hidden
+                    text-overflow: ellipsis
                     
                     &:hover
                         text-decoration: none
